feat: add basic seo meta in result share

--- a/src/public/result.html
+++ b/src/public/result.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{name}}`s Academic Result</title>
+    <meta property="og:title" content="{{name}}`s Academic Result" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="{{seoImage}}" />
+    <meta property="og:description" content="Academic Result of BAIUST's Fall-2023 Semester." />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@next/css/pico.jade.min.css" />
     <style>
